crates/ui/tests/snapshots/panel_snapshots__cache_state_summary_badge_screen__cache_state_summary_badge__ten_tickers.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "summary_text(\"ten_tickers\", &s)"
---
widget: cache_state_summary_badge
scenario: ten_tickers
populated_count: 10
newest_mtime: Some
label: Yahoo cache: 10 tickers · last fetch 2024-12-31
prefix_constant: Yahoo cache: 
empty_constant: no cache
bg: PANEL_RAISED
border: BORDER_1 1px
radius: R3
text_size: MICRO
padding: XXS_S
