crates/ui/tests/snapshots/panel_snapshots__cache_state_summary_badge_screen__cache_state_summary_badge__two_tickers.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "summary_text(\"two_tickers\", &s)"
---
widget: cache_state_summary_badge
scenario: two_tickers
populated_count: 2
newest_mtime: Some
label: Yahoo cache: 2 tickers · last fetch 2024-12-31
prefix_constant: Yahoo cache: 
empty_constant: no cache
bg: PANEL_RAISED
border: BORDER_1 1px
radius: R3
text_size: MICRO
padding: XXS_S
